--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>pc</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="keywords" content="">
+    <meta name="description" content="">
+    <title>OIB</title>
   </head>
   <body>
     <div id="app"></div>
