--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   </head>
   <body>
     <div id="app"></div>
+    <script>
+      window.isPC = !/Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent);
+    </script>
     <!-- built files will be auto injected -->
   </body>
 </html>
